# ondewo-survey-client-python

./: .flake8  .gitignore  .gitmodules  .isort.cfg  .markdownlint-cli2.yaml  .pre-commit-config.yaml  Dockerfile.utils  Makefile  README.md  RELEASE.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
envs/: local.env  versions.env
examples/: environment.env  survey_list_surveys_example.py
ondewo/survey/: fhir_pb2.py  fhir_pb2.pyi  fhir_pb2_grpc.py  survey_pb2.py  survey_pb2.pyi  survey_pb2_grpc.py
ondewo/survey/client/: async_client.py  async_services_container.py  async_services_interface.py  client.py  client_config.py  services_interface.py
ondewo/survey/client/services/: async_fhir.py  async_survey.py
ondewo/survey/utils/: keycloak.py
tests/unit/client/: test_client_wiring.py  test_services_interface.py
tests/unit/examples/: test_survey_list_surveys_example.py
tests/unit/utils/: test_client_config.py  test_keycloak.py
